# devops-study-app

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  mise.toml  release-please-config.json
.github/workflows/: docker-build-push.yaml  release-please.yaml
src/backend/: CHANGELOG.md  pyproject.toml
src/backend/src/backend/: main.py
src/demo/: Dockerfile  main.py
src/frontend/: CHANGELOG.md  pyproject.toml
