[project]
name = "study-tracker-backend"
version = "0.0.0"
description = "Backend API for tracking study time for DevOps certifications"
readme = "README.md"
authors = [
    { name = "Philip", email = "jblunt195@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
study-tracker-api = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
